# FT

./: .gitignore  Makefile.am  config.h.in  configure.in
VEX/priv/guest-amd64/: toIR.c
VEX/priv/main/: vex_main.c
bcg/: Makefile.am  bcg_main.c  dump_tag_table.c
coregrind/: m_libcbase.c  m_tooliface.c  pub_core_tooliface.h
coregrind/m_debuginfo/: debuginfo.c
coregrind/m_initimg/: initimg-linux.c
coregrind/m_replacemalloc/: replacemalloc_core.c  vg_replace_malloc.c
coregrind/m_scheduler/: scheduler.c
debian/: FAQ.txt  README.Debian  changelog  control  copyright  debian.supp  dirs  docs  manpages  overrides  rules  valgrind.sh
debian/patches/: 00list  01_amd64-nops.dpatch  01_cachegrind.dpatch  01_configure.dpatch  01_ipc_stuff.dpatch  01_manpage.dpatch  01_pcm-ioctl.dpatch  01_suppression-strip.dpatch  01_valgrind.pc.dpatch  01_valgrindrc.dpatch  01_vgPlain_do_syscall.dpatch  02_cachegrinderrno.dpatch  02_load-address.dpatch  02_version.dpatch  03_valgrind-libc6-2.6.dpatch  10_ansi-vg.dpatch  11_exitcode.dpatch  12_errhandling.dpatch  12_readdir.dpatch  13_sched_setaffinity-getaffinity.dpatch  14_ioctls.dpatch  15_pthread_mutexattr_gettype.dpatch  16_pthread_mutex_lock.dpatch  17_statvfs64.dpatch  18_cpp-stabs.dpatch  19_pthread_attr_getinheritsched.dpatch  20_pthread_condattr_getsetpshared.dpatch  91_build_with_fno_stack_protector.dpatch
ft/: Makefile.am  dump_tag_table.c  dumpfile.h  ft.h  ft_main.c  io.c  rips.c  shared.c
ft2/: Makefile.am  dump_tag_table.c  ft2_main.c
include/: pub_tool_replacemalloc.h  pub_tool_tooliface.h
